fix(service-card): fix vertically align icon
Vertically aligns the icon in the service card component
for better visual centering within its container.

--- a/src/styles/components/_service-card.scss
+++ b/src/styles/components/_service-card.scss
@@ -62,6 +62,7 @@
     &__icon {
       grid-area: icon;
       display: flex;
+      align-self: center;
       width: var(--size-64);
       height: 64px;
       color: vars.$secondary-500;
